tests/errors/modulo_01.f90
program modulo_01
    print *, modulo(1, 0)
end program
